--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,6 +7,7 @@ homepage = "https://github.com/massalabs/stream_limiter"
 repository = "https://github.com/massalabs/stream_limiter"
 readme = "README.md"
 authors = ["Aurélien Foucault <af@massa.net>"]
+license = "MIT OR Apache-2.0"
 keywords = ["rate", "rate_limiting", "synchronous", "stream"]
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
