--- a/Cargo.toml
+++ b/Cargo.toml
@@ -15,4 +15,5 @@ keywords = ["rate", "rate_limiting", "synchronous", "stream"]
 [dependencies]
 
 [dev-dependencies]
-tempfile = "3.3.0"
+sha2 = "0.10.6"
+hex-literal = "0.4.1"
