--- a/Cargo.toml
+++ b/Cargo.toml
@@ -21,3 +21,8 @@ rand = { version = "0.8.5", features = ["small_rng"] }
 
 [features]
 heavy_testing = []
+
+[profile.dev]
+opt-level = 3
+lto = "thin"
+codegen-units = 32
